This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: isdir should be a local symbol, not exported
Type: Stage:
Components: Interpreter Core Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: doko, python-dev
Priority: normal Keywords: needs review, patch

Created on 2012-08-14 10:41 by doko, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
local-isdir-symbol.diff doko, 2012-08-14 10:41 review
Messages (3)
msg168190 - (view) Author: Matthias Klose (doko) * (Python committer) Date: 2012-08-14 10:41
2.7 only:

isdir should not be exported, but a local symbol instead (this was accidentally changed after the 2.7.3 release.

currently defined and used in Modules/getpath.c and Python/import.c, and used in Python/bltinmodule.c

proposal to rename the implementation in import.c to _Py_isdir and use it in import.c and bltinmodule.c.

as an alternative, make the isdir implementation static for windows and posix builds.
msg168205 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-08-14 15:45
New changeset bdd1b2228c14 by Matthias Klose in branch '2.7':
- Issue #15647: Make isdir static for windows and posix
http://hg.python.org/cpython/rev/bdd1b2228c14
msg168206 - (view) Author: Matthias Klose (doko) * (Python committer) Date: 2012-08-14 15:46
fixed for 2.7, made isdir static on windows and posix
History
Date User Action Args
2022-04-11 14:57:34adminsetgithub: 59852
2012-08-14 15:46:41dokosetstatus: open -> closed
resolution: fixed
messages: + msg168206
2012-08-14 15:45:52python-devsetnosy: + python-dev
messages: + msg168205
2012-08-14 10:41:11dokocreate