- Issue #15647: Make isdir static for windows and posix